Add connection to celery
