# src/app/models/t_simulation_response.py
@@ -1,0 +1,57 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from app.models.base_model import Model
+from app import util
+
+
+class TSimulationResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id=None):  # noqa: E501
+        """TSimulationResponse - a model defined in OpenAPI
+
+        :param id: The id of this TSimulationResponse.  # noqa: E501
+        :type id: str
+        """
+        self.openapi_types = {"id": str}
+
+        self.attribute_map = {"id": "id"}
+
+        self._id = id
+
+    @classmethod
+    def from_dict(cls, dikt) -> "TSimulationResponse":
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The T_SimulationResponse of this TSimulationResponse.  # noqa: E501
+        :rtype: TSimulationResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> str:
+        """Gets the id of this TSimulationResponse.
+
+
+        :return: The id of this TSimulationResponse.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this TSimulationResponse.
+
+
+        :param id: The id of this TSimulationResponse.
+        :type id: str
+        """
+
+        self._id = id
